src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Account_Billing_Address__c</fullName>
        <formula>Account.BillingStreet 
&amp; &quot; &quot; &amp; Account.BillingCity 
&amp; &quot; &quot; &amp; Account.BillingState 
&amp; &quot; &quot; &amp; Account.BillingPostalCode 
&amp; &quot; &quot; &amp; Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <label>Auto Renew</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Transaction_Value__c</fullName>
        <formula>SBQQ__Opportunity__r.Average_transaction_Value_POS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Transaction Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <formula>TEXT(SBQQ__Opportunity__r.Billing_Cycle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Legal_Name__c</fullName>
        <formula>SBQQ__Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Years__c</fullName>
        <label>Contract Term (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSO_Penalty__c</fullName>
        <label>DSO Penalty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_2__c</fullName>
        <label>From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_3__c</fullName>
        <label>From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_4__c</fullName>
        <label>From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Incentive_Bonus__c</fullName>
        <label>Implementation Incentive Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>International_Adjustment__c</fullName>
        <label>International Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issuing_Region__c</fullName>
        <label>Issuing Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Tiers__c</fullName>
        <label>Number of Tiers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>SBQQ__Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <formula>SBQQ__Opportunity__r.Primary_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Factor_2__c</fullName>
        <label>Rebate Factor</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Factor_3__c</fullName>
        <label>Rebate Factor</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Factor_4__c</fullName>
        <label>Rebate Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Factor__c</fullName>
        <label>Rebate Factor</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Frequency__c</fullName>
        <label>Rebate Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Incentive_Bonus_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Incentive Bonus End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Incentive_Bonus_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Incentive Bonus Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Incentive_Bonus__c</fullName>
        <label>Renewal Incentive Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Incentive_Spend_Target__c</fullName>
        <label>Renewal Incentive Spend Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_By_Phone__c</fullName>
        <formula>$User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested By Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <formula>SBQQ__Opportunity__r.Owner_First_Name__c  
&amp; &quot; &quot; &amp;  SBQQ__Opportunity__r.Owner_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEPA_Adjustment__c</fullName>
        <label>SEPA Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signing_Bonus_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Signing Bonus End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signing_Bonus_Spend_Target__c</fullName>
        <label>Signing Bonus Spend Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Signing_Bonus__c</fullName>
        <label>Signing Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Termination_Notice__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Termination Notice</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_2__c</fullName>
        <label>To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_3__c</fullName>
        <label>To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_4__c</fullName>
        <label>To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Incentive_Bonus_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Volume Incentive Bonus End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volume_Incentive_Bonus_Spend_Target__c</fullName>
        <label>Volume Incentive Bonus Spend Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume_Incentive_Bonus_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Volume Incentive Bonus Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volume_Incentive_Bonus__c</fullName>
        <label>Volume Incentive Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X12_month_Volume_Incentive_Bonus_Spend_T__c</fullName>
        <label>12 mth Vol Incentive Bonus Spend Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X12_month_Volume_Incentive_Bonus__c</fullName>
        <label>12 month Volume Incentive Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3_month_Volume_Incentive_Bonus_Spend_Ta__c</fullName>
        <label>3 month Vol Incentive Bonus Spend Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3_month_Volume_Incentive_Bonus__c</fullName>
        <label>3 month Volume Incentive Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X6_month_Volume_Incentive_Bonus_Spend_Ta__c</fullName>
        <label>6 month Vol Incentive Bonus Spend Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X6_month_Volume_Incentive_Bonus__c</fullName>
        <label>6 month Volume Incentive Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X9_month_Volume_Incentive_Bonus_Spend_Ta__c</fullName>
        <label>9 month Vol Incentive Bonus Spend Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS_CODE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>F1_Contract</fullName>
        <active>true</active>
        <label>F1 Contract</label>
    </recordTypes>
</CustomObject>